# bildschirmtext

./: .gitignore  README.md  cept.py  combine.py  convert.py  cut.sh  cut_btx.c  decode_cept.c  editor.py  historic.py  login.py  messaging.py  neu-ulm.py  requirements.txt  session.py  user.py  util.py
cut/1050/: 1050a.cept  1050a.glob  1050a.inc  1050a.pal
cut/10501/: a.glob
cut/1180040000004/: 1180040000004a.glob
cut/1188/: 1188a.cept
cut/12001551/: 12001551g.cept  12001551i.cept  i.glob
cut/1200833401083/: 1200833401083a.cept
cut/15148830101/: 15148830101a.cept
cut/1690/: a.cept
cut/1692/: 1692a.cept  a.glob
cut/20000/: 2000010119a.cept  2000010119a.inc  (+6 more)
doc/: CEPT-Codes für BTX.md  CEPT-Codes für BTX.txt  ideas_for_new_server.md
historic_dumps/: README.md
messages/: 0-1.messages  64-1.messages
rs-server/: Cargo.toml
rs-server/src/: cept.rs  cept_page.rs  dispatch.rs  editor.rs  historic.rs  image.rs  login.rs  mail.rs  main.rs  mediawiki.rs  message.rs  messaging.rs  msg.rs  page.rs  pages.rs  paths.rs  session.rs  stat.rs  staticp.rs  sysmsg.rs  top.rs  ui.rs  ui_messaging.rs  ui_user.rs  user.rs
scripts/: server-modem.sh  server.sh  start-server-modem.sh
secrets/: 0-1.secrets  040326894-1.secrets  64-1.secrets
server/: cept.py  editor.py  historic.py  image.py  login.py  messaging.py  neu-ulm.py  rss.py  unifont-11.0.03.hex  user.py  wikipedia.py
stats/: README
systemd/: bildschirmtext.socket  bildschirmtext@.service
tools/: Makefile  cut.sh  cut_btx.c  cut_btx_pc_online.c  decode_cept.c  decode_palette  decode_palette.c
(+1658 files in other folders)
