[package]
name = "rs-server"
version = "0.1.0"
authors = ["Michael Steil <mist64@mac.com>"]
edition = "2018"

[profile.release]
lto = true
codegen-units = 1
opt-level = 'z'  # Optimize for size.
panic = 'abort'

#[profile.dev.package."*"] # all dependencies
#opt-level = 3

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.19"
scraper = "0.12.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
image = "0.23.12"
exoquant = "0.2.0"
hexdump = "0.1.0"
select = "0.5.0"
